--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -127,13 +127,13 @@ div[data-list-item-id="guildsnav___home"] {
 
 /* SWITCHES */
 .container__87bf1 {
-  background-color: var( --common-color) !important;
+  background-color: var(--switch-slider-color) !important;
 }
 .container__87bf1 .slider__87bf1 rect {
   fill: var(--cycle-switch-slider-color) !important;
 }
 .container__87bf1 .slider__87bf1 path {
-  fill: var( --common-color) !important;
+  fill: var(--switch-slider-color) !important;
 }
 .container__87bf1 svg {
   filter: none;
