--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -11,6 +11,7 @@
 @import url("https://gibbu.github.io/BetterDiscord-Themes/addons/windows-titlebar.css"); /* Old Windows titlebar - remove this @import if you wish to use default titlebar */
 
 :root {
+  
     /* For Radial Status */
   --rs-small-spacing: 1.5px;
   --rs-medium-spacing: 2px;
@@ -25,20 +26,35 @@
   --rs-offline-color: #636b75;
   --rs-streaming-color: #4c17a7;
   --rs-phone-visible: block;
+  /*Other*/
   --textarea-color: rgb(255, 196, 0);
   --Card-Boxes-Color: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
   --home-image: url('https://cliply.co/wp-content/uploads/2021/08/372108630_DISCORD_LOGO_400.gif');
-  --common-color: rgb(124, 196, 189);
-  --common-text-color: rgb(255, 255, 255);
-  --header-secondary: var(--common-text-color);
-  --switch-slider-color:rgb(0, 255, 149);
-  --cycle-switch-slider-color:rgb(0, 0, 0);
-  --textshadow:-1px -1px 0 black,1px -1px 0 black,-1px  1px 0 black,1px  1px 0 black;
   --botTag-color: var(--common-color);
   --botTag-text-color: var(--common-text-color);
-  --botTag-background: 0, 255, 234; /*Put numbers from --common-color*/
+  --botTag-background: 0, 199, 165; /*Put numbers from --common-color*/
+  --common-color: rgb(255, 251, 0);
+  --common-text-color: var(--interactive-active);
+  --header-secondary: var(--common-text-color);
+  --switch-slider-color:var(--common-color);
+  --cycle-switch-slider-color:rgb(0, 0, 0);
+  --textshadow:-1px -1px 0 black,1px -1px 0 black,-1px  1px 0 black,1px  1px 0 black;
+  
+  /* Font and scrollbar color */
+  --interactive-normal: var(--common-text-color);
+  --interactive-hover: #ddd;
+  --interactive-active: #fff;
+  --interactive-muted: #777;
+  --channels-default: #aaa;
+  --text-muted: var(--interactive-normal);
+  --transition-time: 250ms;
+  --transition-type: cubic-bezier(0.4,0,0.2,1);
+  --scrollbar-color: 255,255,255;
+  --scrollbar-color-alt: 0,0,0;
+  --scrollbar-opacity: 0.5;
+  --scrollbar-opacity-hover: 0.3;
+  --scrollbar-width: 5px;
 }
-
 /* Add custom home icon */
 div[data-list-item-id="guildsnav___home"] {
 	background: var(--home-image) top center/110% no-repeat;
