--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -273,7 +273,7 @@ div[data-list-item-id="guildsnav___home"] {
   border-radius: 15px;
   width: 260px;
   margin-right: 1px;
-  box-shadow: 0px 0px 10px rgb(255, 255, 255);
+  box-shadow: 0px 0px 10px  var(--common-color);
   background: var(--Card-Boxes-Color);   
   }
     
