--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -27,15 +27,15 @@
   --rs-streaming-color: #4c17a7;
   --rs-phone-visible: block;
   /*Other*/
-  --textarea-color: rgb(255, 196, 0);
+  --textarea-color: rgb(102, 0, 255);
   --Card-Boxes-Color: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
   --home-image: url('https://cliply.co/wp-content/uploads/2021/08/372108630_DISCORD_LOGO_400.gif');
   --botTag-color: var(--common-color);
   --botTag-text-color: var(--common-text-color);
   --botTag-background: 0, 199, 165; /*Put numbers from --common-color*/
-  --common-color: rgb(255, 251, 0);
+  --common-color: rgba(0, 255, 234, 0.895);
   --common-text-color: var(--interactive-active);
-  --header-secondary: var(--common-text-color);
+  --header-secondary: var(--common-color);
   --switch-slider-color:var(--common-color);
   --cycle-switch-slider-color:rgb(0, 0, 0);
   --textshadow:-1px -1px 0 black,1px -1px 0 black,-1px  1px 0 black,1px  1px 0 black;
@@ -43,7 +43,7 @@
   /* Font and scrollbar color */
   --interactive-normal: var(--common-text-color);
   --interactive-hover: #ddd;
-  --interactive-active: #fff;
+  --interactive-active: #ffffff;
   --interactive-muted: #777;
   --channels-default: #aaa;
   --text-muted: var(--interactive-normal);
@@ -55,6 +55,23 @@
   --scrollbar-opacity-hover: 0.3;
   --scrollbar-width: 5px;
 }
+
+.newMessagesBar__0f481,
+.jumpToPresentBar__0f481 {
+  background-color: var(--common-color);
+}
+
+.barButtonBase__0f481 {
+  color: var(--interactive-active);
+}
+
+.wrapper_c19a55.mentioned__5126c {
+  border-color: var(--common-color);
+  box-shadow: inset 0px 0px 10px 3px var(--common-color), 0px 0px 13px 4px var(--common-color);
+}
+
+
+
 /* Add custom home icon */
 div[data-list-item-id="guildsnav___home"] {
 	background: var(--home-image) top center/110% no-repeat;
@@ -339,4 +356,18 @@ div[data-list-item-id="guildsnav___home"] {
 [class*="item__58105"] {
     background-color: rgb(255, 255, 255);
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* White glow */
+}
+
+[class*="vc-settings-quickActions-pill"] {
+  background: var(--Card-Boxes-Color);
+  border-width: 1px;
+  border-style: inset;
+  border-radius: 10px;
+  box-shadow: -0px 2px 13px rgb(24, 24, 24);
+  border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
+  color:  var(--common-text-color);
+}
+
+[class*="inputWrapper__0f084"] {
+  color: var(--common-color);
 }
