--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -1,4 +1,5 @@
 
+
 /**
  * @name Modern Look
  * @version 1.0
@@ -29,20 +30,21 @@
   --rs-phone-visible: block;
   /*Other*/
   --textarea-color: rgb(102, 0, 255);
-  --Card-Boxes-Color: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
+  --Card-Boxes-Color: transparent;
   --home-image: url('https://cliply.co/wp-content/uploads/2021/08/372108630_DISCORD_LOGO_400.gif');
   --botTag-color: var(--common-color);
   --botTag-text-color: var(--common-text-color);
   --botTag-background: 0, 199, 165; /*Put numbers from --common-color*/
-  --common-color: rgba(0, 255, 234, 0.895);
+  --common-color: rgba(255, 200, 0, 0.895);
   --common-text-color: var(--interactive-active);
   --header-secondary: var(--common-color);
   --switch-slider-color:var(--common-color);
   --cycle-switch-slider-color:rgb(0, 0, 0);
   --textshadow:-1px -1px 0 black,1px -1px 0 black,-1px  1px 0 black,1px  1px 0 black;
+  --tooltip-text-color:rgba(0, 0, 0, 0.995);
   
   /* Font and scrollbar color */
-  --interactive-normal: var(--common-text-color);
+  --interactive-normal: #ffffff;
   --interactive-hover: #ddd;
   --interactive-active: #ffffff;
   --interactive-muted: #777;
@@ -57,6 +59,7 @@
   --scrollbar-width: 5px;
 }
 
+/* Messages */
 .newMessagesBar__0f481,
 .jumpToPresentBar__0f481 {
   background-color: var(--common-color);
@@ -116,20 +119,18 @@ div[data-list-item-id="guildsnav___home"] {
 .tooltip__382e7 .tooltipContent__382e7,
 .tooltip__382e7 .guildNameText_b1f768,
 .tooltip__382e7 .clickCTA__0f481 {
-  color: var(--white-500);;
-  text-shadow: -1 -1 3px rgba(0, 0, 0, 0.6); /* Σκιά για καθαρότητα */
-  font-weight: 700; /* Πιο έντονο κείμενο */
+  color: var(--tooltip-text-color);
   font-size: 17px; /* Ελαφρώς μεγαλύτερη γραμματοσειρά */
 }
 .tooltip__382e7 .anchor-1MIwyf {
-  color: var(--common-text-color);
+  color: var(--tooltip-text-color)!important;
   text-decoration: underline;
 }
 .tooltip__382e7 .activityIcon_b1f768 {
-  color: var(--common-text-color) !important;
+  color: var(--tooltip-text-color) !important;
 }
 .tooltip__382e7 .muteText_b1f768 {
-  color: var(--common-text-color) !important;
+  color: var(--tooltip-text-color) !important;
 }
 
 .theme-dark,
@@ -198,7 +199,7 @@ div[data-list-item-id="guildsnav___home"] {
 .modeSelected__2ea32 a.link__2ea32,
 .modeSelected__2ea32.typeThread__2ea32 .link__2ea32 {
 
-  background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
+  background: var(--Card-Boxes-Color);
   position: relative;
   width: 210px;
   border-color: var(--common-color);
@@ -206,15 +207,16 @@ div[data-list-item-id="guildsnav___home"] {
   z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
   overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
   backdrop-filter: blur(55px);
-  filter:brightness(107%);
+  filter:brightness(100%);
   
   &:hover {
-  background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
+  background: var(--Card-Boxes-Color);
   position: relative;
-  box-shadow: 0px 0px 10px var(--common-color);
+  border-color: var(--common-color);
+  box-shadow: inset 0px 0px 5px 3px var(--common-color), 0px 0px 7px 1.5px var(--common-color);
   z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
   overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
-  filter:brightness(100%);
+  filter:brightness(107%);
   }
 }
 
@@ -251,6 +253,7 @@ div[data-list-item-id="guildsnav___home"] {
 }
 }
 }
+
 [class*="contentColumn"] {
   max-width: 1300px;
 }
@@ -258,6 +261,7 @@ div[data-list-item-id="guildsnav___home"] {
 [class*="tabBarPanel_f8303a tabPanel__2666b"] {
   max-width: 600px;
 }
+
 .sidebarRegion__23e6b {
 
   .sidebarRegionScroller__23e6b {
@@ -282,10 +286,10 @@ div[data-list-item-id="guildsnav___home"] {
   overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
   color: var(--common-color);
   backdrop-filter: blur(75px);
-  filter:brightness(107%);
+  filter:brightness(100%);
   }       
   &.selected_b3f026:hover {
-  filter:brightness(100%);
+  filter:brightness(177%);
   }          
 }     
  /* makes sidebar big, adds channel styling */
@@ -369,7 +373,6 @@ div[data-list-item-id="guildsnav___home"] {
   border-radius: 10px;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--common-text-color);
 }
 
 [class*="inputWrapper__0f084"] {
