--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -35,13 +35,12 @@
   --botTag-color: var(--common-color);
   --botTag-text-color: var(--common-text-color);
   --botTag-background: 0, 199, 165; /*Put numbers from --common-color*/
-  --common-color: rgba(255, 200, 0, 0.895);
+  --common-color: rgba(0, 199, 165);
   --common-text-color: var(--interactive-active);
   --header-secondary: var(--common-color);
   --switch-slider-color:var(--common-color);
   --cycle-switch-slider-color:rgb(0, 0, 0);
   --textshadow:-1px -1px 0 black,1px -1px 0 black,-1px  1px 0 black,1px  1px 0 black;
-  --tooltip-text-color:rgba(0, 0, 0, 0.995);
   
   /* Font and scrollbar color */
   --interactive-normal: #ffffff;
@@ -73,8 +72,6 @@
   border-color: var(--common-color);
   box-shadow: inset 0px 0px 10px 3px var(--common-color), 0px 0px 7px 4px var(--common-color);
 }
-
-
 
 /* Add custom home icon */
 div[data-list-item-id="guildsnav___home"] {
@@ -110,27 +107,36 @@ div[data-list-item-id="guildsnav___home"] {
 
 /* TOOLTIP */
 .tooltip__382e7 {
-  background-color: var(--common-color) !important;
+  background-color: rgba(0, 0, 0, 0.7) !important;
   border-radius: 10px;
+  width: fit-content !important;
+  padding: 5px 10px;
+  color: white;
+  font-size: 12px;
+  max-width: 300px; /* Περιορισμός για πολύ μεγάλα tooltips */
+  white-space: nowrap; /* Αποτρέπει το κείμενο από το να σπάσει σε δεύτερη γραμμή */
 }
+
 .tooltip__382e7 .tooltipPointer__382e7 {
   border-top-color: var(--common-color) !important;
+  
 }
 .tooltip__382e7 .tooltipContent__382e7,
 .tooltip__382e7 .guildNameText_b1f768,
 .tooltip__382e7 .clickCTA__0f481 {
-  color: var(--tooltip-text-color);
+  color: var(--common-color);
   font-size: 17px; /* Ελαφρώς μεγαλύτερη γραμματοσειρά */
 }
+
 .tooltip__382e7 .anchor-1MIwyf {
-  color: var(--tooltip-text-color)!important;
+  color: var(--common-color)!important;
   text-decoration: underline;
 }
 .tooltip__382e7 .activityIcon_b1f768 {
-  color: var(--tooltip-text-color) !important;
+  color: var(--common-color) !important;
 }
 .tooltip__382e7 .muteText_b1f768 {
-  color: var(--tooltip-text-color) !important;
+  color: var(--common-color) !important;
 }
 
 .theme-dark,
@@ -174,6 +180,7 @@ div[data-list-item-id="guildsnav___home"] {
   filter: none;
 }
 
+/*BotTag*/
 .botTag__82f07 {
   border-radius: 5px !important;
 }
