--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -35,9 +35,10 @@
   --botTag-background: 0, 199, 165; /*Put numbers from --common-color*/
   --common-color: rgb(0, 199, 165);
   --common-text-color: var(--interactive-active);
-  --header-secondary: var(--common-color);
+  --header-secondary: var(--interactive-active);
   --switch-slider-color:var(--common-color);
   --cycle-switch-slider-color:rgb(255, 255, 255);
+  --link-color: var(--common-color);
   
   /* Font and scrollbar color */
   --interactive-normal: #ffffff;
@@ -152,7 +153,7 @@ div[data-list-item-id="guildsnav___home"] {
   --background-modifier-selected: rgba(255,255,255,0.125);
   --background-modifier-accent: var(--common-color);
   --text-brand: var(--common-color);
-  --text-link: var(--common-color);
+  --text-link: var(--link-color);
 }
 
 /* Buttons */
