--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -474,7 +474,7 @@ div[data-list-item-id="guildsnav___home"] {
 .selected_b3f026 {
   background: var(--Card-Color); 
   color: var(--common-color);
-  box-shadow: 0px 0px 15px 0px var(--box-shadow);  
+  box-shadow: 0px 3px 5px 1.1px var(--box-shadow);  
   filter:brightness(100%);
   }      
   &.selected_b3f026:hover {
@@ -500,7 +500,7 @@ div[data-list-item-id="guildsnav___home"] {
   border-width: 1px;
   border-style: inset;
   border-radius: 10px;
-  box-shadow: -0px 2px 13px var(--box-shadow);
+  box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
   color:  var(--common-text-color);
 }
@@ -510,7 +510,7 @@ div[data-list-item-id="guildsnav___home"] {
   background: var(--Card-Boxes-Color);
   border-width: 1px;
   border-style: inset;
-  box-shadow: -0px 1px 13px var(--box-shadow);
+  box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
   color:  var(--common-text-color);
 }
 
@@ -518,7 +518,7 @@ div[data-list-item-id="guildsnav___home"] {
   background: var(--Card-Boxes-Color);
   border-width: 1px;
   border-style: inset;
-  box-shadow: -0px 3px 10px 5px var(--box-shadow);
+  box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
   color:  var(--common-text-color);
 }
@@ -532,7 +532,7 @@ div[data-list-item-id="guildsnav___home"] {
   border-width: 1px;
   border-style: inset;
   border-radius: 10px;
-  box-shadow: -0px 3px 10px 2.5px rgb(24, 24, 24);
+  box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
   border-color: rgba(16, 48, 113, 0) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
 }
 
@@ -547,6 +547,19 @@ div[data-list-item-id="guildsnav___home"] {
 [class*="interactive_bf202d interactive__972a0 linkButton__972a0 interactiveSelected__972a0 selected_bf202d"],
 [class*="interactive_bf202d interactive__972a0 interactiveSelected__972a0 selected_bf202d"] {
   color: var(--common-color);
+}
+
+.vc-settings-card  {
+  background-color: transparent !important;
+  margin-top: 0px;
+  padding-top: 10px;
+  border-bottom: 1px solid var(--background-modifier-accent) !important;
+}
+
+.card__73069 {
+  background-color: transparent !important;
+
+  border-bottom: 1px solid var(--background-modifier-accent) !important;
 }
 
 .vc-settings-tab-bar {
@@ -581,11 +594,9 @@ div[data-list-item-id="guildsnav___home"] {
 .vc-settings-tab-bar + .divider_ae36e5 {
   display: none;
 }
-/*
- *
- *  TAB BAR
- *
- */
+
+
+/* TAB BAR */
 .tabBar__133bf .item_b3f026, .tabBar_d6f9e9 .item_b3f026, .tabBar__81b3e .item_b3f026, .top_b3f026 .item_b3f026, .topPill_b3f026 .item_b3f026, .settingsTabBar_f62afd .item_b3f026, .settingsTabBar_dc2e0e .item_b3f026 {
   min-width: 40px;
   margin: 8px;
@@ -595,7 +606,7 @@ div[data-list-item-id="guildsnav___home"] {
   border-bottom: none;
   line-height: 25px;
   font-size: 17px;
-  box-shadow: 0px 3px 10px 5px var(--box-shadow);
+  box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
   color: var(--interactive-normal) !important;
 }
 .tabBar__133bf .item_b3f026:first-child, .tabBar_d6f9e9 .item_b3f026:first-child, .tabBar__81b3e .item_b3f026:first-child, .top_b3f026 .item_b3f026:first-child, .topPill_b3f026 .item_b3f026:first-child, .settingsTabBar_f62afd .item_b3f026:first-child, .settingsTabBar_dc2e0e .item_b3f026:first-child {
@@ -608,5 +619,5 @@ div[data-list-item-id="guildsnav___home"] {
 .tabBar__133bf .item_b3f026.selected_b3f026, .tabBar_d6f9e9 .item_b3f026.selected_b3f026, .tabBar__81b3e .item_b3f026.selected_b3f026, .top_b3f026 .item_b3f026.selected_b3f026, .topPill_b3f026 .item_b3f026.selected_b3f026, .settingsTabBar_f62afd .item_b3f026.selected_b3f026, .settingsTabBar_dc2e0e .item_b3f026.selected_b3f026 {
   background-color: var(--common-color) !important;
   color: var(--interactive-active) !important;
-  box-shadow: 0px 3px 10px 5px var(--box-shadow);
+  box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
 }
