--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -29,7 +29,7 @@
   /*Other*/
 
   --Card-Color: linear-gradient(to right, transparent 15%, var(--common-color) 130%);
-  --Card-Boxes-Color: transparent;
+  --Card-Boxes-Color: linear-gradient(360deg, rgba(32, 32, 32, 0.779) 25%, rgba(88, 88, 88, 0.779) 65%);;
   --home-image: url('https://cliply.co/wp-content/uploads/2021/08/372108630_DISCORD_LOGO_400.gif');
   --botTag-color: var(--common-color);
   --botTag-text-color: var(--common-text-color);
@@ -532,6 +532,7 @@ div[data-list-item-id="guildsnav___home"] {
   border-width: 1px;
   border-style: inset;
   border-radius: 10px;
+  margin-top: -15px;
   box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
   border-color: rgba(16, 48, 113, 0) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
 }
@@ -558,7 +559,6 @@ div[data-list-item-id="guildsnav___home"] {
 
 .card__73069 {
   background-color: transparent !important;
-
   border-bottom: 1px solid var(--background-modifier-accent) !important;
 }
 
