--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -532,9 +532,24 @@ div[data-list-item-id="guildsnav___home"] {
   border-width: 1px;
   border-style: inset;
   border-radius: 10px;
-  margin-top: -15px;
   box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
   border-color: rgba(16, 48, 113, 0) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
+}
+
+[class*="session__803f2"] {
+  background: transparent;
+  border-radius: 10px;
+  box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
+  border-color: rgba(16, 48, 113, 0) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
+}
+/* Cards in Themes*/
+[class*="children__7bffb"] {
+  background-color: transparent;
+}
+/*NEW Tags*/
+[class*="textBadge__2b1f5 base__2b1f5 eyebrow__2b1f5 baseShapeRound__2b1f5"] {
+  background-color: var(--common-color) !important;
+  color: var(--common-text-color);
 }
 
 [class*="inputWrapper__0f084"] {
