--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -599,6 +599,12 @@ div[data-list-item-id="guildsnav___home"] {
   padding-top: 10px;
   border-bottom: 1px solid var(--background-modifier-accent) !important;
 }
+/* Backup & Restore */
+:is(.vc-settings-card){
+  background: var(--Card-Boxes-Color) !important;
+  border: 0px solid var(--background-modifier-accent) !important; 
+  border-bottom: 1px solid var(--background-modifier-accent) !important;
+}
 
 .card__73069 {
   background-color: transparent !important;
@@ -664,3 +670,4 @@ div[data-list-item-id="guildsnav___home"] {
   color: var(--interactive-active) !important;
   box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
 }
+
