--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -56,6 +56,7 @@
   --scrollbar-opacity-hover: 0.3;
   --scrollbar-width: 5px;
   --box-shadow:rgba(0, 0, 0, 0.578);
+  --list-item-transition:0.5s;
 }
 
 /*Zoom hover channels*/
@@ -63,8 +64,8 @@
     transition:  var(--list-item-transition);
 }
 .wrapper__2ea32:hover .link__2ea32 {
-    transform: translateY(0px) scale(1.09);
-    background-color: transparent;
+    transform: translateX(-20px) scale(1.2);
+    background: var(--Card-Color);
    
 }
 
@@ -686,4 +687,3 @@ div[data-list-item-id="guildsnav___home"] {
   color: var(--interactive-active) !important;
   box-shadow: 0px 3px 5px 1.1px var(--box-shadow);
 }
-
