--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -59,6 +59,13 @@
   --list-item-transition:0.5s;
 }
 
+[class*="eyebrow_cf4812 headerText_b3f026"] {
+  color:  var(--common-color);
+  font-size: 16px;
+  margin-top: -11px;
+  margin-bottom: -2px;
+}
+
 /*Categories Colors and zoom in Setting Session*/
 [class*="eyebrow_cf4812 headerText_b3f026"] {
   color:  var(--common-color);
