--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -65,18 +65,19 @@
     transition: var(--list-item-transition);
 }
 
+.channel__972a0 {
+    border-radius: 30px 0px 0px 30px !important;
+}
+
 /* Hover effect και στα DM */
 .channel__972a0:hover {
-    transform: translateX(27px) scale(1.2);
+    transform: translateX(5px) scale(1.12);
     background: var(--Card-Color);
-    border-left: none !important;
-    box-shadow: none !important;
-    outline: none !important;
+    border-radius: 30px 0px 0px 30px !important;
 }
 
 /* Αλλαγή χρώματος στο επιλεγμένο DM */
 [class*="interactive_bf202d interactive__972a0 interactiveSelected__972a0 selected_bf202d"] {
-    color: var(--common-color);
     background: var(--Card-Color);
     border-radius: 0px; /* Προαιρετικά για πιο smooth εμφάνιση */
 }
