--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -82,6 +82,14 @@
     border-radius: 0px; /* Προαιρετικά για πιο smooth εμφάνιση */
 }
 
+/* Εφαρμογή background ΜΟΝΟ στο επιλεγμένο DM (Friends.Nitro,Shop) */
+[class*="linkButton__972a0"].interactiveSelected__972a0,
+[class*="linkButton__972a0"].selected_bf202d {
+    background: var(--Card-Color);
+    border-radius: 0px; /* Μπορείς να το αλλάξεις αν θέλεις */
+}
+
+
 [class*="eyebrow_cf4812 headerText_b3f026"] {
   color:  var(--common-color);
   font-size: 16px;
@@ -433,7 +441,7 @@ div[data-list-item-id="guildsnav___home"] {
 
 .theme-dark,
 .theme-light {
-  --background-modifier-hover: rgba(255,255,255,0.075);
+  --background-modifier-hover: rgba(255, 255, 255, 0);
   --background-modifier-active: rgba(255,255,255,0.1);
   --background-modifier-selected: rgba(255,255,255,0.125);
   --background-modifier-accent: var(--common-color);
