--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -59,6 +59,27 @@
   --list-item-transition:0.5s;
 }
 
+/*toggle channels text*/
+.toggle-button::after {
+  content: "Toggle channels";
+  position: absolute;
+  font-size: 17px;
+  bottom: -50%;
+  left: 5%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.326);
+  color: #fff;
+  padding: 5px;
+  border-radius: 2.5px;
+  opacity: 0;
+
+}
+
+.toggle-button:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
+
 /*Hover in Dms*/
 /* Εφαρμογή σε όλα τα στοιχεία της sidebar */
 .channel__972a0{
